IRIS-4081 | Fix the spinner jumping around

--- a/front/main/app/styles/module/_wds-spinner.scss
+++ b/front/main/app/styles/module/_wds-spinner.scss
@@ -1,4 +1,4 @@
-$duration: 100s;
+$duration: 1s;
 $spinner-color: $wds-color-link;
 
 .wds-spinner {
@@ -25,39 +25,21 @@ $spinner-color: $wds-color-link;
 	top: 50%;
 	transform: translateZ(0);
 
-	&.wds-block {
+	&__block {
 		display: block;
 		left: auto;
 		margin: auto;
 		position: relative;
 	}
 
-	&.ember-initializing {
-		height: 75vh;
-	}
-
-	.wds-path {
+	&__path {
 		-webkit-backface-visibility: hidden;
-		animation: dash ($duration / 6) linear infinite alternate-reverse;
+		animation: dash ($duration * 3.5) linear infinite alternate-reverse;
 		stroke: $spinner-color;
 	}
-}
 
-
-
-@keyframes rotator {
-	from {
-		transform: rotate(0);
-	}
-
-	to {
-		transform: rotate(360deg);
-	}
-}
-
-@keyframes dash {
-	to {
-		stroke-dashoffset: 0;
+	&.ember-initializing {
+		height: 75vh;
 	}
 }
 
